# dd-git-metadata-poc

./: .gitignore  README.md  service.datadog.yaml
go/: README.md  go.mod  main.go
java/gradle/: README.md  settings.gradle
java/gradle/app/: build.gradle
java/gradle/app/src/main/java/gitmetadatapoc/: App.java
java/gradle/app/src/test/java/gitmetadatapoc/: AppTest.java
java/gradle/out_sample/: git.properties
java/maven/: README.md
java/maven/gitmetadatapoc/: pom.xml
java/maven/gitmetadatapoc/src/main/java/com/datadoghq/gitmetadatapoc/: App.java
java/maven/gitmetadatapoc/src/test/java/com/datadoghq/gitmetadatapoc/: AppTest.java
java/maven/out_sample/: git.properties
nodejs/rollup/: README.md
nodejs/rollup/gitmetadatapoc/: package.json  rollup.config.js  test.cjs  test.js
nodejs/rollup/gitmetadatapoc/src/: foo.js  main.cjs  main.js
nodejs/webpack/: README.md  package.json  webpack.config.js
nodejs/webpack/src/: main.js
python/: setup.py
python/ddgitmetadata/: __init__.py
python/embed_module/: README.md  setup.py
python/embed_module/ddgitmetadata/: __init__.py  repository_url.py
python/git_metadata_poc/: sendspan.py
python/hatch/: LICENSE.txt  README.md  pyproject.toml
python/hatch/git_metadata_poc/: __about__.py  sendspan.py
python/hatch/tests/: __init__.py
python/setuptools/: setup.py
python/setuptools/git_metadata_poc/: __main__.py  sendspan.py
ruby/: Gemfile  README.md  main.rb
